--- a/app/scss/_intro.scss
+++ b/app/scss/_intro.scss
@@ -7,10 +7,9 @@
         font-style: normal;
         font-weight: 900;
         font-size: 89px;
-        line-height: 108px;
+        line-height: 90px;
         letter-spacing: 0.05em;
         text-transform: uppercase;
-
         color: #FFFFFF;
         }
     }
@@ -19,7 +18,8 @@
 
     &__inner {
         position: relative;
-        padding-top: 509px;
+        padding-top: 625px;
+        padding-bottom: 134px;
     }
 
     // .intro__info
@@ -44,19 +44,29 @@
     &__talents__items {
         position: absolute;
         display: flex;
-        right: 25%;
+        right: 29%;
         top: -10%;
         transform: matrix(0.94, -0.34, 0.34, 0.94, 0, 0);
     }
     &__talents__items-2 {
         position: absolute;
         display: flex;
-        right: 2%;
+        right: 6%;
         top: -10%;
         transform: matrix(0.94, -0.34, 0.34, 0.94, 0, 0);
     }
     &__talents__line:first-child{
         margin-right: 25px;
+    }
+    &__descr{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 20px;
+        line-height: 24px;
+
+        color: #FFFFFF;
+
     }
 }
 
@@ -87,6 +97,17 @@
         padding: 20px;
         border-radius: 3px;
         margin-bottom: 20px;
+        position: relative;
+        &::before{
+            content: "";
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0) 31.89%, #FFFFFF 100%);
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 5;
+        }
     }
     &__item__name{
         font-family: 'Montserrat';
@@ -95,7 +116,7 @@
         font-size: 21px;
         line-height: 110.4%;
         /* or 23px */
-
+        z-index: 10;
         letter-spacing: 0.05em;
         width: 50%;
         color: #1B1B1B;
@@ -111,7 +132,7 @@
         font-size: 15px;
         line-height: 82.4%;
         /* or 12px */
-
+        z-index: 10;
         letter-spacing: 0.05em;
 
         color: #1B1B1B;
