--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,10 +1,14 @@
 // ************************ SCSS ************************ //
 
 @import "fonts";
+@import "global";
 @import "navbar";
 @import "vars"; 
 @import "intro"; 
 @import "video-bg"; 
+@import "about"; 
+@import "clients"; 
+@import "projects"; 
 
 
 
@@ -26,16 +30,7 @@ input[type="search"]::-webkit-search-results-decoration {
 body{
 	font-family: 'Montserrat', sans-serif;
 }
-.primary-title{
-	-webkit-text-stroke: 2px #fff;
-	color: transparent;
-	font-family: 'Montserrat';
-	font-style: normal;
-	font-weight: 900;
-	font-size: 89px;
-	line-height: 108px;
-	letter-spacing: 0.05em;
-}
+
 .container {
 	max-width: $mw + px;
 	margin: 0 auto;
