--- a/app/scss/page-main/_clients.scss
+++ b/app/scss/page-main/_clients.scss
@@ -1,7 +1,8 @@
 .clients {
     padding-top: 57px;
     // .clients__inner
-
+    padding-bottom: 127px;
+    
     &__inner {
         display: flex;
         align-items: center;
