--- a/app/scss/_navbar.scss
+++ b/app/scss/_navbar.scss
@@ -127,7 +127,9 @@ nav {
   justify-content: center;
   align-items: center;
 }
-
+.mobile__menu{
+  display: none;
+}
 // Тут указываем тот брейкпоинт, на котором нам нужно прятать обычное меню и показывать уже бургер.
 // Так же это значение ставим в файле navbar.js
 @media screen and (max-width:768px) {
@@ -140,13 +142,13 @@ nav {
       cursor: pointer;
       &.active-burger {
         &:before {
-          background: rgb(0, 0, 0);
+          background: #fff;
           transform: rotate(45deg);
           transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) .3s all; 
           top: 8px;
         }
         &:after {
-          background: rgb(0, 0, 0);
+          background: #fff;
           transform: rotate(-45deg);
           bottom: 10px;
           transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) .3s all;
@@ -180,15 +182,56 @@ nav {
             transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) .3s all;
           }
     }
-    .menu__list{
+    // .menu__list{
+    //   position: absolute;
+    //   top: -100%;
+    //   &-item {
+    //     margin-right: 0 !important;
+    //      a {
+    //       color: black;
+    //     }
+    //   }
+    // }
+    .mobile__menu .header__search{
+      display: flex;
+    }
+    .mobile__menu .header__social__list{
+      display: block;
+    }
+    nav .navbar .menu{
+      display: none;
+    }
+    .header__search{
+      display: none;
+    }
+    .header__social__list{
+      display: none;
+    }
+    .mobile__menu{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       position: absolute;
-      top: -100%;
-      &-item {
-        margin-right: 0 !important;
-         a {
-          color: black;
-        }
+      width: 100%;
+      height: 0%;
+      overflow: hidden;
+      z-index: 1000;
+      left: 0;
+      transition: all 0.4s;
+      top: 58px;
+      background-color: #1E1E1E;
+    }
+    .mobile__menu .menu__list{
+      flex-direction: column;
+      align-items: center;
+      & li{
+        margin: 0 0 15px 0;
       }
+      
+    }
+    nav .navbar{
+      flex-direction: row !important;
+      justify-content: space-between;
     }
 }
 
