--- a/app/scss/page-main/_projects.scss
+++ b/app/scss/page-main/_projects.scss
@@ -2,20 +2,48 @@
     background-color: rgba(32, 32, 32, 1);
     position: relative;
     // .projects__inner
-
+    &::before{
+        content: "";
+        width: 100%;
+        height: 209px;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background: linear-gradient(180deg, #242424 0%, rgba(36, 36, 36, 0) 100%);
+        z-index: 10;
+    }
+    &::after{
+        content: "";
+        width: 100%;
+        height: 209px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        background: linear-gradient(360deg, #212121 0%, rgba(33, 33, 33, 0) 100%);
+        z-index: 10;
+    }
     &__inner {
         padding-top: 374px;
         padding-bottom: 217px;
+        padding-left: 54px;
     }
 
     // .projects__info
 
     &__info {
+        position: relative;
     }
 
     // .projects__info-img
 
-    &__info-img {
+    &__info-img_camera {
+        position: absolute;
+        top: -100%;
+    }
+    &__info-img_particles {
+        position: absolute;
+        top: 6%;
+        left: -18px;
     }
 
     // .projects__info-title
@@ -45,10 +73,10 @@
         font-size: 24px;
         line-height: 93.9%;
         /* or 23px */
-
+        padding-left: 15px;
         letter-spacing: 0.05em;
         margin-top: 32px;
-        width: 30%;
+        width: 33%;
         color: #D9D9D9;
     }
 
@@ -61,10 +89,22 @@
 
     &__items-wrapper {
         position: absolute;
-        right: 0;
+        right: 2%;
         top: 0;
         height: 100%;
         display: flex;
+        &::before{
+            content: "";
+            height: 100%;
+            width: 624px;
+            position: absolute;
+            left: 50%;
+            background: rgba(144, 122, 94, 0.68);
+            filter: blur(208.5px);
+            border-radius: 100px;
+            top: 50%;
+            transform: translate(-50%,-50%);
+        }
     }
 
     // .projects__items-line-1
