--- a/app/scss/page-main/_news.scss
+++ b/app/scss/page-main/_news.scss
@@ -31,9 +31,8 @@
     // .news__items
 
     &__items {
-        display: grid;
-        grid-template-columns: repeat(4,273px);
-        grid-template-rows: repeat(3,379px);
+        display: flex;
+        flex-wrap: wrap;
         gap: 30px;
         margin-top: 45px;
     }
@@ -92,47 +91,10 @@
         }
     }
     &__item {
+        width: 273px;
+        height: 379px;
         border-radius: 5px;
-        &:nth-child(1){
-            grid-column: 1/3;
-            grid-row: 1/2;
-        }
-        &:nth-child(2){
-            grid-column: 3/4;
-            grid-row: 1/2;
-        }
-        &:nth-child(3){
-            grid-column: 4/5;
-            grid-row: 1/2;
-        }
-        &:nth-child(4){
-            grid-column: 1/2;
-            grid-row: 2/3;
-        }
-        &:nth-child(5){
-            grid-column: 2/3;
-            grid-row: 2/3;
-        }
-        &:nth-child(6){
-            grid-column: 3/5;
-            grid-row: 2/3;
-        }
-        &:nth-child(7){
-            grid-column: 1/2;
-            grid-row: 3/4;
-        }
-        &:nth-child(8){
-            grid-column: 2/3;
-            grid-row: 3/4;
-        }
-        &:nth-child(9){
-            grid-column: 3/4;
-            grid-row: 3/4;
-        }
-        &:nth-child(10){
-            grid-column: 4/5;
-            grid-row: 3/4;
-        }
+        
         
         // .news__item_big
 
@@ -142,6 +104,8 @@
             background-repeat: no-repeat;
             display: flex;
             flex-direction: column;
+            width: 579px;
+            height: 379px;
             justify-content: end;
             padding: 19px 26px;
             border-radius: 5px;
