--- a/app/scss/_navbar.scss
+++ b/app/scss/_navbar.scss
@@ -132,7 +132,7 @@ nav {
 }
 // Тут указываем тот брейкпоинт, на котором нам нужно прятать обычное меню и показывать уже бургер.
 // Так же это значение ставим в файле navbar.js
-@media screen and (max-width:991px) {
+@media screen and (max-width: 1346px) {
     .burger {
       display: block;
       position: relative;
@@ -197,6 +197,8 @@ nav {
     }
     .mobile__menu .header__social__list{
       display: block;
+      margin-top: 10px;
+      margin-left: 0;
     }
     nav .navbar .menu{
       display: none;
