--- a/app/scss/page-single-actors/_single-actors.scss
+++ b/app/scss/page-single-actors/_single-actors.scss
@@ -46,6 +46,7 @@
                 position: absolute;
                 background: #181818;
                 border-radius: 50%;
+                transition: all 3s;
                 box-shadow: 0px 0px 17px rgba(22, 22, 22, 0.78), 0px 0px 17px rgba(7, 7, 7, 0.78);
                 &:nth-child(1){
                     bottom: 22%;
