add 2 page and adaptive

--- a/app/scss/page-single-actors/_single-actors.scss
+++ b/app/scss/page-single-actors/_single-actors.scss
@@ -287,6 +287,7 @@
         // .single-actors__images-wrapper
     
         &__images-wrapper {
+            transition-timing-function: linear;
         }
     
         // .single-actors__images-item
