--- a/app/scss/page-about/_page-about.scss
+++ b/app/scss/page-about/_page-about.scss
@@ -2,7 +2,72 @@
     .start .primary-title{
         padding-left: 95px;
     }
+   
+
+		
+    
+
+
     .about-us {
+
+		// .about-us__item-last
+
+		&__item-last {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 37px;
+            margin-right: 0 !important;
+            &:hover{
+                box-shadow: none !important;
+            }
+		}
+
+		// .about-us__item-last-img
+
+		&__item-last-img {
+		}
+
+		// .about-us__item-last-title
+
+		&__item-last-title {
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 28px;
+            line-height: 107.9%;
+            /* or 31px */
+            margin-top: 29px;
+            text-align: center;
+            letter-spacing: 0.015em;
+
+            color: #907A5E;
+
+		}
+
+		// .about-us__item-last-descr
+
+		&__item-last-descr {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 107.9%;
+        margin-top: 15px;
+        /* or 22px */
+        text-align: center;
+        letter-spacing: 0.015em;
+
+        color: #232323;
+
+		}
+
+		// .about-us__item-last-btn
+
+		&__item-last-btn {
+            padding: 21px 31px;
+            margin-top: 29px;
+		}
         &__items {
             display: flex;
             flex-wrap: wrap;
@@ -17,7 +82,13 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: 325px;
             margin-bottom: 45px;
+            transition: all .3s;
+            &:hover{
+                box-shadow: 0 5px 15px #907A5E;
+                border-radius: 10px;
+            }
         }
 
         // .about-us__item-img
@@ -87,7 +158,7 @@
                 font-family: 'Montserrat';
                 font-style: normal;
                 font-weight: 700;
-                font-size: 13px;
+                font-size: 12px;
                 line-height: 82.4%;
                 /* identical to box height, or 11px */
 
