--- a/app/scss/page-news/_news-page.scss
+++ b/app/scss/page-news/_news-page.scss
@@ -9,6 +9,7 @@
         display: flex;
         flex-direction: column;
         margin-right: 27px;
+        
         & .news__item{
             width: 273px;
             margin-bottom: 25px;
@@ -20,6 +21,9 @@
             background: #D9D9D9;
             &:last-child{
                 margin-bottom: 0;
+            }
+            &:hover{
+                background-color: #fff;
             }
         }
         & .news__item-title{
