--- a/app/scss/page-projects/_page-projects.scss
+++ b/app/scss/page-projects/_page-projects.scss
@@ -76,6 +76,11 @@
         margin-right: 20px;
         margin-bottom: 20px;
         border-radius: 5px;
+        transition: all 0.3s;
+        &:hover{
+            box-shadow: 0px 10px 35px #907A5E;
+            transform: scale(1.02);
+        }
         &:nth-child(4n){
             margin-right: 0;
         }
