--- a/app/scss/page-about/_page-about.scss
+++ b/app/scss/page-about/_page-about.scss
@@ -240,6 +240,7 @@
             color: #fff;
             letter-spacing: 0.05em;
             margin-right: 20px;
+            margin-top: -15px;
         }
     
         // .about-us__info-descr
