--- a/app/scss/page-news/_news-page.scss
+++ b/app/scss/page-news/_news-page.scss
@@ -1,5 +1,7 @@
 .page-news{
-    
+    .news{
+        padding-top: 15px;
+    }
     & .news__item   {
         &:nth-child(11){
             grid-column: 1/3;
